Dark mode whatsapp fix

--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ a { text-decoration: none; color: var(--primary); transition: var(--transition);
     height: 60px;
     bottom: 40px;
     right: 40px;
-    background-color: #25d366;
-    color: #FFF;
+    background-color: #25d366 !important;
+    color: #FFF !important;
     border-radius: 50%;
     text-align: center;
     font-size: 35px;
@@ -103,9 +103,13 @@ a { text-decoration: none; color: var(--primary); transition: var(--transition);
     display: flex;
     align-items: center;
     justify-content: center;
+    color-scheme: light !important;
+}
+.whatsapp-float i {
+    color: #FFF !important;
 }
 .whatsapp-float:hover {
-    background-color: #128C7E;
+    background-color: #128C7E !important;
     transform: translateY(-5px);
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
     color: #FFF;
